--- a/install
+++ b/install
@@ -3,7 +3,7 @@
 set -o errexit
 
 steps_dir="$(dirname "$0")/steps"
-steps=(macos homebrew mise zsh ssh git ghostty neovim zed bat)
+steps=(macos homebrew mise zsh ssh git ghostty neovim rancher-desktop zed bat)
 
 red=$(tput setaf 1)
 green=$(tput setaf 2)
