--- a/install
+++ b/install
@@ -5,9 +5,9 @@ set -o errexit
 steps_dir="$(dirname "$0")/steps"
 steps=(macos homebrew mise zsh ssh git ghostty neovim rancher-desktop zed bat)
 
-red=$(tput setaf 1)
-green=$(tput setaf 2)
-reset=$(tput sgr0)
+red="\033[31m"
+green="\033[32m"
+reset="\033[0;39m"
 
 function echo_red {
   echo -e "${red}${1}${reset}"
